3.12:
    - v3.1.0 added, old versions removed
    -
3.11: fix pointer to particles (with @pconesa)
3.10:
    - v2.3.0 added
3.9.1:
    - use max-threads=1 for train_vae until it's fixed: https://github.com/zhonge/cryodrgn/issues/245
3.9:
    - add cryoDRGN2 protocol for ab initio reconstruction
    - fix chimera viewer
3.8: fixing a bug related to zvalues and particle IDs: when the particle set is created from a subset and the ids of the set are not consecutive, cryodrgn fails
3.7:
    - drop support for v<1.0.0
    - remove emtable requirement
    - update citations
    - update the installer
    - updated viewer, removed iter selection since it is done in the protocol
    - training protocol now generates output particles and volumes (with _cryodrgnZValues column)
3.6.1: fix error when no downsampling was done, preprocess step cannot be skipped
3.6:
    - add possible outputs class
    - update for versions 1.0.0, 1.1.0
3.5.1: fix missing arg for training preprocessed particles
3.5: 0.3.5 added
3.4: 0.3.4 added
3.3: 0.3.3b added
3.2:
    - 0.3.2b added
    - Use preprocess when chunks despite scaling, also use input star when no preprocess
    - Added missing parameters and use extraParams if set
    - Added server mode to use the Jupyter nb remotely
    - Improved the help of the nb in server mode
3.1:
    - Update to use version 0.3.2, deprecated versions < 0.3.0
    - protocol preprocess
    - Allow to specify chunk of particle stacks
    - Generate output CryoDrgnParticles
    - protocol training
    - Use import particles from preprocess
    - Run basic analysis as another step
    - viewer: does not run analysis now
3.0.3:
 - add version 0.3.1
 - close #8, #9, #10
 - run Jupyter notebook in a separate thread
 - fix visualizing vols in ChimeraX
3.0.2 - add version 0.3.0b support, add relion plugin dependency for preprocess protocol
3.0.0 - add missing pip files, fix installation
3.0.0b4 - switch to emtable, same as relion plugin