@@ -26,26 +26,28 @@
 # *
 # **************************************************************************
 
-import os
 import pickle
-import numpy as np
 import re
 from glob import glob
 from enum import Enum
 
-import pyworkflow.utils as pwutils
 import pyworkflow.protocol.params as params
 import pyworkflow.object as pwobj
+import pyworkflow.utils as pwutils
+from pyworkflow.plugin import Domain
+from pwem.constants import ALIGN_PROJ, ALIGN_NONE
 from pwem.protocols import ProtProcessParticles
-import pwem.objects as emobj
+from pwem.objects import SetOfParticles
 
-from .. import Plugin
-from ..constants import EPOCH_LAST, EPOCH_SELECTION, WEIGHTS, CONFIG, Z_VALUES
+from cryodrgn import Plugin
+from cryodrgn.constants import WEIGHTS, CONFIG, Z_VALUES
+
+
+convert = Domain.importFromPlugin('relion.convert', doRaise=True)
 
 
 class outputs(Enum):
-    Particles = emobj.SetOfParticles
-    Volumes = emobj.SetOfVolumes
+    Particles = SetOfParticles
 
 
 class CryoDrgnProtBase(ProtProcessParticles):
@@ -54,22 +56,20 @@ class CryoDrgnProtBase(ProtProcessParticles):
 
     def _createFilenameTemplates(self):
         """ Centralize how files are called within the protocol. """
-        def out(*p):
-            return os.path.join(self.getOutputDir(f'analyze.{self._epoch}'), *p)
-
         myDict = {
-            'output_vol': out('vol_%(id)03d.mrc'),
-            'output_volN': out('kmeans%(ksamples)d/vol_%(id)03d.mrc'),
-            'z_values': out('z_values.txt'),
-            'z_valuesN': out('kmeans%(ksamples)d/z_values.txt'),
-            'weights': self.getOutputDir(f'weights.{self._epoch}.pkl'),
-            'config': self.getOutputDir('config.pkl')
+            'input_parts': self._getExtraPath('input_particles.star'),
+            'input_poses': self._getExtraPath('poses.pkl'),
+            'input_ctfs': self._getExtraPath('ctf.pkl'),
+            'z': self.getOutputDir('z.%(epoch)d.pkl'),
+            'z_final': self.getOutputDir('z.pkl'),
+            'weights': self.getOutputDir('weights.%(epoch)d.pkl'),
+            'weights_final': self.getOutputDir('weights.pkl'),
+            'config': self.getOutputDir('config.yaml')
         }
         self._updateFilenamesDict(myDict)
 
     # --------------------------- DEFINE param functions ----------------------
     def _defineParams(self, form):
-        form.addHidden('doInvert', params.BooleanParam, default=True)
         form.addSection(label='Input')
         form.addHidden(params.GPU_LIST, params.StringParam, default='0',
                        label="Choose GPU IDs",
@@ -79,11 +79,40 @@ class CryoDrgnProtBase(ProtProcessParticles):
                             " You can use multiple GPUs - in that case"
                             " set to i.e. *0 1 2*.")
 
+        form.addParam('doContinue', params.BooleanParam, default=False,
+                      label="Continue previous run?",
+                      help="Training will resume from the latest epoch.")
+
+        form.addParam('continueRun', params.PointerParam,
+                      condition='doContinue', important=True,
+                      pointerClass='CryoDrgnProtTrain, CryoDrgnProtAbinitio',
+                      label="Previous run", allowsNull=True)
+
         form.addParam('inputParticles', params.PointerParam,
-                      pointerClass="CryoDrgnParticles",
-                      label='CryoDrgn particles')
+                      pointerClass='SetOfParticles',
+                      condition='not doContinue',
+                      label="Input particles", important=True,
+                      help='Select a set of particles from a consensus C1 '
+                           '3D refinement.')
+
+        form.addParam('doInvert', params.BooleanParam, default=True,
+                      condition='not doContinue',
+                      expertLevel=params.LEVEL_ADVANCED,
+                      label="Are particles white?")
+
+        form.addParam('doWindow', params.BooleanParam, default=True,
+                      condition='not doContinue',
+                      expertLevel=params.LEVEL_ADVANCED,
+                      label="Apply circular mask?")
+
+        form.addParam('winSize', params.FloatParam, default=0.85,
+                      expertLevel=params.LEVEL_ADVANCED,
+                      condition='doWindow and not doContinue',
+                      label="Window size",
+                      help="Circular windowing mask inner radius")
 
         form.addParam('zDim', params.IntParam, default=8,
+                      condition='not doContinue',
                       validators=[params.Positive],
                       label='Dimension of latent variable',
                       help='It is recommended to first train on lower '
@@ -104,25 +133,6 @@ class CryoDrgnProtBase(ProtProcessParticles):
 
         self._defineAdvancedParams(form)
 
-        form.addSection(label='Analysis')
-        form.addParam('viewEpoch', params.EnumParam,
-                      choices=['last', 'selection'], default=EPOCH_LAST,
-                      display=params.EnumParam.DISPLAY_LIST,
-                      label="Epoch to analyze")
-
-        form.addParam('epochNum', params.IntParam,
-                      condition='viewEpoch==%d' % EPOCH_SELECTION,
-                      label="Epoch number")
-
-        form.addParam('ksamples', params.IntParam, default=20,
-                      label='Number of K-means samples to generate',
-                      help="*cryodrgn analyze* uses the k-means clustering "
-                           "algorithm to partition the latent space into "
-                           "regions (by default k=20 regions), and generate a "
-                           "density map from the center of each of these "
-                           "regions. The goal is to provide a tractable number "
-                           "of representative density maps to visually inspect. ")
-
         form.addParallelSection(threads=16, mpi=0)
 
     def _defineAdvancedParams(self, form):
@@ -131,122 +141,102 @@ class CryoDrgnProtBase(ProtProcessParticles):
 
     # --------------------------- INSERT steps functions ----------------------
     def _insertAllSteps(self):
-        self._insertFunctionStep(self.runTrainingStep)
-        if self.viewEpoch == EPOCH_LAST:
-            self._epoch = self.numEpochs.get() - 1
-        else:
-            self._epoch = self.epochNum.get()
         self._createFilenameTemplates()
-        self._insertFunctionStep(self.runAnalysisStep, self._epoch)
+
+        if self.doContinue:
+            self._insertFunctionStep(self.continueStep)
+        else:
+            self._insertFunctionStep(self.convertInputStep)
+
+        self._insertFunctionStep(self.runTrainingStep)
         self._insertFunctionStep(self.createOutputStep)
 
     # --------------------------- STEPS functions -----------------------------
+    def convertInputStep(self):
+        """ Create the input star, poses and ctf pkl files as expected by cryoDRGN. """
+        imgSet = self._getInputParticles()
+        alignType = ALIGN_PROJ if self._inputHasAlign() else ALIGN_NONE
+        convert.writeSetOfParticles(imgSet,
+                                    self._getExtraPath('input_particles.star'),
+                                    outputDir=self._getExtraPath(),
+                                    alignType=alignType)
+
+        if self._inputHasAlign():
+            self._runProgram('parse_pose_star', self._getParsePosesArgs())
+        self._runProgram('parse_ctf_star', self._getParseCtfArgs())
+
+    def continueStep(self):
+        """ Copy previous run outputs. """
+        prevRun = self.continueRun.get()
+
+        pwutils.cleanPath(self._getExtraPath())
+        self.info("Copying previous run results...")
+        pwutils.copyTree(prevRun._getExtraPath(), self._getExtraPath())
+
     def runTrainingStep(self):
         """ Should be implemented in subclasses. """
         raise NotImplementedError
 
-    def runAnalysisStep(self, epoch):
-        """ Run analysis step.
-        Args:
-            epoch: epoch number to be analyzed.
-        """
-        self._runProgram('analyze', self._getAnalyzeArgs(epoch))
-
     def createOutputStep(self):
-        """ Create the protocol outputs. """
-        # Creating a set of particles with z_values
-        outImgSet = self._createParticleSet()
-        self._defineOutputs(**{outputs.Particles.name: outImgSet})
+        """ Creating a set of particles with z_values. """
+        inputSet = self._getInputParticles()
+        zValues = iter(self._getParticlesZvalues())
+        outImgSet = self._createSetOfParticles()
+        outImgSet.copyInfo(inputSet)
+        outImgSet.copyItems(inputSet, updateItemCallback=self._setZValues,
+                            itemDataIterator=zValues)
+        setattr(outImgSet, WEIGHTS, pwobj.String(self._getFileName('weights_final')))
+        setattr(outImgSet, CONFIG, pwobj.String(self._getFileName('config')))
 
-        # Creating a set of volumes with z_values
-        fn = self._getExtraPath('volumes.sqlite')
-        samplingRate = self.inputParticles.get().getSamplingRate()
-        files, zValues = self._getVolumes()
-        setOfVolumes = self._createVolumeSet(files, zValues, fn, samplingRate)
-        self._defineOutputs(**{outputs.Volumes.name: setOfVolumes})
-        self._defineSourceRelation(self.inputParticles.get(), setOfVolumes)
+        self._defineOutputs(**{outputs.Particles.name: outImgSet})
+        self._defineSourceRelation(self._getInputParticles(pointer=True), outImgSet)
 
     # --------------------------- INFO functions ------------------------------
-    def _validateBase(self):
+    def _validate(self):
         errors = []
+        if self.doContinue:
+            if not self.continueRun.hasValue():
+                errors.append("Select the input run to continue from!")
 
-        if self.viewEpoch == EPOCH_SELECTION:
-            ep = self.epochNum.get()
-            total = self.numEpochs.get()
-            if ep > total:
-                errors.append(f"You can analyse only epochs 1-{total}")
+            prevEpochs = self.continueRun.get().numEpochs.get()
+            if self.numEpochs <= prevEpochs:
+                errors.append(f"Number of epochs must be larger than {prevEpochs} "
+                              "that are already completed!")
 
         return errors
 
     # --------------------------- UTILS functions -----------------------------
-    def _getAnalyzeArgs(self, epoch):
-        return [
-            self.getOutputDir(),
-            f"{epoch}",
-            '--Apix %0.3f' % self.inputParticles.get().getSamplingRate(),
-            '--ksample %d' % self.ksamples,
+    def _getParsePosesArgs(self):
+        args = [
+            self._getFileName('input_parts'),
+            f"-o {self._getFileName('input_poses')}"
         ]
+
+        return args
+
+    def _getParseCtfArgs(self):
+        args = [
+            self._getFileName('input_parts'),
+            f"-o {self._getFileName('input_ctfs')}",
+            "--ps 0"  # required due to cryodrgn parsing bug
+        ]
+
+        return args
 
     def _runProgram(self, program, args):
         gpus = ','.join(str(i) for i in self.getGpuList())
         self.runJob(Plugin.getProgram(program, gpus), ' '.join(args))
-
-    def _getVolumes(self):
-        """ Returns a list of volume names and their zValues. """
-        vols = []
-        if self.hasMultLatentVars():
-            fn = 'output_volN'
-            num = self.ksamples.get()
-            zValue = 'z_valuesN'
-            zValues = self._getVolumeZvalues(self._getFileName(zValue,
-                                                               ksamples=num))
-        else:
-            fn = 'output_vol'
-            num = 10
-            zValue = 'z_values'
-            zValues = self._getVolumeZvalues(self._getFileName(zValue))
-
-        for volId in range(num):
-            if self.hasMultLatentVars():
-                volFn = self._getFileName(fn, ksamples=num, epoch=self._epoch,
-                                          id=volId)
-            else:
-                volFn = self._getFileName(fn, epoch=self._epoch, id=volId)
-
-            if os.path.exists(volFn):
-                vols.append(volFn)
-            else:
-                raise FileNotFoundError("Volume %s does not exists. \n"
-                                        "Please select a valid epoch "
-                                        "number." % volFn)
-
-        return vols, zValues
 
     def _getParticlesZvalues(self):
         """
         Read from z.pkl file the particles z_values
         :return: a numpy array with the particles z_values
         """
-        zEpochFile = self.getEpochZFile(self._epoch)
+        zEpochFile = self._getFileName("z_final")
         with open(zEpochFile, 'rb') as f:
             zValues = pickle.load(f)
+
         return zValues
-
-    def _createParticleSet(self):
-        """
-        Create a set of particles with the associated z_values
-        :return: a set of particles
-        """
-        inputImgSet = self.inputParticles.get().ptcls.get()
-        zValues = iter(self._getParticlesZvalues())
-        outImgSet = self._createSetOfParticles()
-        outImgSet.copyInfo(inputImgSet)
-        outImgSet.copyItems(inputImgSet, updateItemCallback=self._setZValues,
-                            itemDataIterator=zValues)
-        setattr(outImgSet, WEIGHTS, pwobj.String(self._getFileName('weights')))
-        setattr(outImgSet, CONFIG, pwobj.String(self._getFileName('config')))
-
-        return outImgSet
 
     def _setZValues(self, item, row=None):
         vector = pwobj.CsvList()
@@ -255,66 +245,35 @@ class CryoDrgnProtBase(ProtProcessParticles):
         vector._convertValue(list(row))
         setattr(item, Z_VALUES, vector)
 
-    def _getVolumeZvalues(self, zValueFile):
-        """
-        Read from z_values.txt file the volume z_values
-        :return: a list with the volumes z_values
-        """
-        return np.loadtxt(zValueFile, dtype=float).tolist()
-
-    def _createVolumeSet(self, files, zValues, path, samplingRate,
-                         updateItemCallback=None):
-        """
-        Create a set of volume with the associated z_values
-        :param files: list of the volumes path
-        :param zValues: list with the volumes z_values
-        :param path: output path
-        :param samplingRate: volumes sampling rate
-        :return: a set of volumes
-        """
-        pwutils.cleanPath(path)
-        volSet = emobj.SetOfVolumes(filename=path)
-        volSet.setSamplingRate(samplingRate)
-        volId = 0
-        if type(zValues[0]) is not list:
-            # csvList requires each item as a list
-            zValues = [[i] for i in zValues]
-
-        for volFn in files:
-            vol = emobj.Volume()
-            vol.setFileName(volFn)
-            vector = pwobj.CsvList()
-            # We assume that each row "i" of z_values corresponds to each
-            # volumes with ID "i"
-            volZValues = zValues[volId]
-            vector._convertValue(volZValues)
-            # Creating a new column in the volumes with the z_value
-            setattr(vol, Z_VALUES, vector)
-            if updateItemCallback:
-                updateItemCallback(vol)
-            volSet.append(vol)
-            volId += 1
-
-        return volSet
-
     def getOutputDir(self, *paths):
-        return os.path.join(self._getPath('output'), *paths)
+        return self._getExtraPath("output", *paths)
 
-    def getEpochZFile(self, epoch):
-        return self.getOutputDir('z.%d.pkl' % epoch)
-
-    def getLastEpoch(self):
+    def _getLastEpoch(self):
         """ Return the last iteration number. """
         epoch = None
-        self._epochRegex = re.compile(r'z.(\d).pkl')
-        files = sorted(glob(self.getEpochZFile(0).replace('0', '*')))
+        epochRegex = re.compile(r'z.(\d).pkl')
+        files = sorted(glob(self._getFileName("z", epoch=0).replace('0', '*')))
         if files:
             f = files[-1]
-            s = self._epochRegex.search(f)
+            s = epochRegex.search(f)
             if s:
                 epoch = int(s.group(1))  # group 1 is a digit iteration number
 
         return epoch
 
+    def _canContinue(self):
+        return self._getLastEpoch() is not None
+
     def hasMultLatentVars(self):
         return self.zDim > 1
+
+    def _getInputParticles(self, pointer=False):
+        if self.doContinue and self.continueRun.hasValue():
+            input = self.continueRun.get().inputParticles
+        else:
+            input = self.inputParticles
+
+        return input if pointer else input.get()
+
+    def _inputHasAlign(self):
+        return self._getInputParticles().hasAlignmentProj()
